Fix chart layout:
Chart wasn't aligned to grid after column deletions.

--- a/app/assets/stylesheets/modules/_supertab.sass
+++ b/app/assets/stylesheets/modules/_supertab.sass
@@ -22,6 +22,7 @@
     height: 40%
   +media($large-screen-up)
     +span-columns(3 of 12, block-collapse)
+    margin-right: 0
     height: 100%
 
 .super-tab
