--- a/app/assets/stylesheets/pages/_area-show.sass
+++ b/app/assets/stylesheets/pages/_area-show.sass
@@ -19,8 +19,8 @@
       background-color: $carers
 
   +media($large-screen-up)
-    +span-columns(8 of 12, block-collapse)
-    margin-right: 3px
+    +span-columns(9 of 12, block-collapse)
+    border-left: 3px solid $background
     height: 100%
 
 #spotlight-container
